Fix card description overflow on IE

--- a/src/components/ty-card/ty-card.css
+++ b/src/components/ty-card/ty-card.css
@@ -15,6 +15,7 @@ ty-card {
 
 .ty-card-description {
   margin-bottom: 0.25em;
+  width: 100%;
 }
 
 .ty-card-description--flyright li {
